fixed issue where score would overlap with menu on some resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@
     min-height: 900px;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* logo and control styles */
 
 .logo-menu-score {
@@ -32,7 +36,7 @@
 .volume, .menu {
     color: white !important;
     font-size: 24px;
-    padding-right:10px
+    padding-right:10px;
 }
 
 #menu-list {
@@ -57,10 +61,25 @@
 }
 
 .score {
+    width: 80%;
     padding-top: 20px;
     font-family: "Handlee", sans-serif;
     color: white;
     text-align: center;
     vertical-align: middle;
-    font-size: 24px;
+    font-size: 22px;
+}
+
+
+/* media queries */
+
+@media(max-width: 413px) {
+
+    .score {
+        width: 100%;
+    }
+
+    .counter {
+        display: block;
+    }
 }
